Added .envrc file for all projects, fixed environment.yml and imports as needed.

--- a/paulssonlab/src/paulssonlab/cloning/Chromatogram.ipynb
+++ b/paulssonlab/src/paulssonlab/cloning/Chromatogram.ipynb
@@ -25,7 +25,7 @@
     "from bokeh.resources import INLINE, CDN\n",
     "from bokeh.embed import file_html\n",
     "import numpy as np\n",
-    "from util import grouper\n",
+    "from paulssonlab.util import grouper\n",
     "from align import align_mafft, read_ab1, trim_to_ref"
    ]
   },
@@ -37,7 +37,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import plotting, align"
+    "from paulssonlab.cloning import plotting, align"
    ]
   },
   {
@@ -103,10 +103,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fix correspondence between overview boxes and detail range (need to round to integer positions!)\n",
+    "# switch to new bokeh custom layouts\n",
     "# TODO: unrolled/wrapped chromatograph viewer\n",
     "# figure out overview margins\n",
-    "# TODO: plot overview/detail EACH AS ONE PLOT (stacking in y-axis)\n",
     "# reflow static html on load/window resize (for both combined and unrolled chromatograph viewer)"
    ]
   }
@@ -127,9 +126,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
