--- a/paulssonlab/src/paulssonlab/projects/molecule_counting/Analysis JQS.ipynb
+++ b/paulssonlab/src/paulssonlab/projects/molecule_counting/Analysis JQS.ipynb
@@ -16,10 +16,9 @@
     "import param\n",
     "import pickle\n",
     "import os\n",
-    "import pyarrow as pa\n",
     "from scipy.integrate import simps\n",
-    "import segmentation\n",
-    "from matriarch_stub import RevImage\n",
+    "import paulssonlab.projects.molecule_counting.segmentation as segmentation\n",
+    "from paulssonlab.projects.molecule_counting.matriarch_stub import RevImage\n",
     "import astropy.stats\n",
     "from cytoolz import partial"
    ]
@@ -777,9 +776,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
