Added linear program lineage tracking (Jug 2014).

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -47,27 +47,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from nd2reader import ND2Reader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nd2reader\n",
-    "\n",
-    "dir(nd2reader)\n",
-    "print(nd2reader.__version__)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -82,8 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/CN_Limited_GC_restart.nd2\""
+    "headpath = \"/n/scratch2/de64/2019-05-31_validation_data\"\n",
+    "nd2file = \"/n/scratch2/de64/2019-05-31_validation_data/Main_Experiment.nd2\""
    ]
   },
   {
@@ -101,9 +80,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Personal\\ Folders/Leoncini/DATA_Ti3/20180719--Glu_Acetate--Yvonne/GLU_to_ACET_SWITCH---MERGE_NEW.nd2\"\n",
-    "targetdir = \"/n/scratch2/de64/2019-10-24_emanuele\"\n",
-    "transferjob(sourcedir, targetdir)"
+    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Personal\\ Folders/Daniel/Image_Data/Bacillus_Project/2019-05-31_DE85_training_data/exp_folder\"\n",
+    "targetdir = \"/n/scratch2/de64/2019-05-31_validation_data\"\n",
+    "tr.cluster.transferjob(sourcedir, targetdir)"
    ]
   },
   {
@@ -162,7 +141,7 @@
    "outputs": [],
    "source": [
     "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
-    "    nd2file, headpath, tpts_per_file=50, ignore_fovmetadata=True\n",
+    "    nd2file, headpath, tpts_per_file=100, ignore_fovmetadata=False\n",
     ")"
    ]
   },
@@ -279,13 +258,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<i> Could this be made more robust? E.g. edge detection </i>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -358,12 +330,12 @@
     "    interactive_kymograph.preview_y_precentiles,\n",
     "    {\"manual\": True},\n",
     "    imported_array_list=fixed(imported_array_list),\n",
-    "    y_percentile=IntSlider(value=100, min=0, max=100, step=1),\n",
-    "    smoothing_kernel_y_dim_0=IntSlider(value=17, min=1, max=200, step=2),\n",
+    "    y_percentile=IntSlider(value=99, min=0, max=100, step=1),\n",
+    "    smoothing_kernel_y_dim_0=IntSlider(value=29, min=1, max=200, step=2),\n",
     "    triangle_nbins=IntSlider(value=50, min=10, max=300, step=10),\n",
     "    triangle_scaling=FloatSlider(value=3.5, min=0.0, max=4.0, step=0.05),\n",
     "    triangle_threshold_bounds=FloatRangeSlider(\n",
-    "        value=[0, 1.0],\n",
+    "        value=[0.1, 0.25],\n",
     "        min=0,\n",
     "        max=1.0,\n",
     "        step=0.01,\n",
@@ -393,15 +365,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_percentiles_smoothed_list[0].shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -419,7 +382,7 @@
     "\n",
     "**padding_y (int)** : Padding to be used when cropping in the y-dimension.\n",
     "\n",
-    "**trench_len_y (int)** : Length from the end of the tenches to be used when cropping in the y-dimension. <i> why can't this just be found using the edge nearest to the feeding channel? </i>\n",
+    "**trench_len_y (int)** : Length from the end of the tenches to be used when cropping in the y-dimension.\n",
     "\n",
     "**top_orientation (int)** : The orientation of the top-most row where 0 corresponds to a trench with a downward-oriented trench opening and 1 corresponds to a trench with an upward-oriented trench opening.\n",
     "\n",
@@ -442,7 +405,7 @@
     "    imported_array_list=fixed(imported_array_list),\n",
     "    y_min_edge_dist=IntSlider(value=50, min=10, max=200, step=10),\n",
     "    padding_y=IntSlider(value=20, min=0, max=100, step=1),\n",
-    "    trench_len_y=IntText(value=270, description=\"Trench Length (y)\"),\n",
+    "    trench_len_y=IntSlider(value=270, min=0, max=1000, step=10),\n",
     "    vertical_spacing=FloatSlider(value=0.9, min=0.0, max=2.0, step=0.01),\n",
     "    expected_num_rows=IntText(value=2, description=\"Number of Rows:\", disabled=False),\n",
     "    orientation_detection=Dropdown(\n",
@@ -568,13 +531,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<i> Number/trench interest point registration (SIFT)? Autocorrelation? Single-dimension Euclidean distances between intensity maps of trench-sized boxes?</i>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -638,17 +594,10 @@
     "    cropped_in_y_list=fixed(cropped_in_y_list),\n",
     "    all_midpoints_list=fixed(all_midpoints_list),\n",
     "    x_drift_list=fixed(x_drift_list),\n",
-    "    trench_width_x=IntSlider(value=30, min=10, max=100, step=2),\n",
+    "    trench_width_x=IntSlider(value=30, min=10, max=50, step=2),\n",
     "    trench_present_thr=FloatSlider(value=0.0, min=0.0, max=1.0, step=0.05),\n",
     "    vertical_spacing=FloatSlider(value=0.8, min=0.0, max=2.0, step=0.01),\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<i> Why do we store data as kymographs? </i>"
    ]
   },
   {
@@ -699,7 +648,11 @@
    "outputs": [],
    "source": [
     "dask_controller = tr.cluster.dask_controller(\n",
-    "    walltime=\"04:00:00\", local=False, n_workers=100, memory=\"8GB\"\n",
+    "    walltime=\"04:00:00\",\n",
+    "    local=False,\n",
+    "    n_workers=100,\n",
+    "    memory=\"8GB\",\n",
+    "    working_directory=\"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/\",\n",
     ")\n",
     "dask_controller.startdask()\n",
     "dask_controller.daskcluster.start_workers()"
@@ -721,7 +674,7 @@
    "outputs": [],
    "source": [
     "kymoclust = tr.kymograph.kymograph_cluster(\n",
-    "    headpath=headpath, trenches_per_file=50, paramfile=True\n",
+    "    headpath=headpath, trenches_per_file=25, paramfile=True\n",
     ")"
    ]
   },
@@ -1270,6 +1223,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dask_controller.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dask_controller.displaydashboard()"
    ]
   },
@@ -1311,7 +1273,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate Region Properties"
+    "## Lineage Tracing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_function = tr.tracking.scorefn(\n",
+    "    headpath, \"fluorsegmentation\", u_size=0.22, sig_size=0.08, u_pos=0.21, sig_pos=0.1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score_function.interactive_scorefn()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tracking_Solver = tr.tracking.tracking_solver(\n",
+    "    headpath,\n",
+    "    \"fluorsegmentation\",\n",
+    "    ScoreFn=score_function,\n",
+    "    merge_per_iter=0,\n",
+    "    conv_tolerence=2,\n",
+    "    edge_limit=2,\n",
+    ")\n",
+    "data, orientation, empty_trenches = score_function.output.result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tracking_Solver.interactive_tracking(data, orientation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tracking_Solver.save_params()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate Lineage Traces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tracking_Solver = tr.tracking.tracking_solver(\n",
+    "    headpath, \"fluorsegmentation\", paramfile=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tracking_Solver.lineage_trace_file(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Tracking_Solver.compute_all_lineages()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Region Properties (No Lineage)"
    ]
   },
   {
@@ -1321,7 +1388,7 @@
    "outputs": [],
    "source": [
     "analyzer = tr.analysis.regionprops_extractor(\n",
-    "    headpath, \"fluorsegmentation\", intensity_channel_list=[\"MCHERRY\"]\n",
+    "    headpath, \"fluorsegmentation\", intensity_channel_list=[\"mCherry\", \"YFP\"]\n",
     ")"
    ]
   },
@@ -1332,33 +1399,6 @@
    "outputs": [],
    "source": [
     "analyzer.export_all_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfout = pd.read_pickle(headpath + \"/analysis.pkl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfout"
    ]
   },
   {
@@ -1376,7 +1416,7 @@
    "source": [
     "%matplotlib widget\n",
     "\n",
-    "kyview = tr.analysis.kymograph_viewer(headpath, \"MCHERRY\", \"fluorsegmentation\")"
+    "kyview = tr.analysis.kymograph_viewer(headpath, \"mCherry\", \"fluorsegmentation\")"
    ]
   },
   {
