[cloning,shenker] WIP cloning webhook using Google Cloud Run.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/Golden gate parts ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/Golden gate parts ingest.ipynb
@@ -89,6 +89,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Google Drive webhooks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gc.drive.service.channels().stop(\n",
+    "    body={\n",
+    "        \"kind\": \"api#channel\",\n",
+    "        \"id\": \"c54591cc-851b-11ea-86e0-acde48001122\",\n",
+    "        \"resourceId\": \"NbYPC5dnlgKIHS2z6FC-EDTgSYg\",\n",
+    "    }\n",
+    ").execute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "help(gc.drive.service.files().watch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "now = int(datetime.utcnow().timestamp() * 1e3)\n",
+    "watch_id = str(uuid.uuid1())\n",
+    "body = {\n",
+    "    \"kind\": \"api#channel\",\n",
+    "    \"type\": \"web_hook\",\n",
+    "    \"id\": watch_id,\n",
+    "    # \"resourceId\": watch_id + \"-hhh\",\n",
+    "    # \"resourceUri\": watch_id + \"-xxx\",\n",
+    "    \"address\": \"https://cloning.webhooks.paulssonlab.com\",\n",
+    "    \"token\": \"test\",\n",
+    "    \"expiration\": now + 10000,\n",
+    "}\n",
+    "res = (\n",
+    "    gc.drive.service.files()\n",
+    "    .watch(fileId=\"1Ab1h1_WzcJ4MMGPwl6qNwbXWMCQGG3ML4bpnGXvN1yU\", body=body)\n",
+    "    .execute()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Google Sheets"
    ]
   },
