small fixes to lineage tracing. Also added files for release.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -3,7 +3,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
    },
    "source": [
     "# TrenchRipper Master Notebook"
@@ -67,9 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": false
-   },
+   "metadata": {},
    "source": [
     "#### Transfer files into the scratch folder"
    ]
@@ -82,16 +81,14 @@
    "source": [
     "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Personal\\ Folders/Daniel/Image_Data/Bacillus_Project/2019-05-31_DE85_training_data/exp_folder\"\n",
     "targetdir = \"/n/scratch2/de64/2019-05-31_validation_data\"\n",
-    "tr.cluster.transferjob(sourcedir, targetdir)"
+    "tr.trcluster.transferjob(sourcedir, targetdir)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "### Extract to hdf5 files"
+    "## Extract to hdf5 files"
    ]
   },
   {
@@ -107,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dask_controller = tr.cluster.dask_controller(\n",
+    "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
     "    n_workers=40,\n",
@@ -181,18 +178,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Kymographs"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Test Parameters"
    ]
@@ -627,9 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Generate Kymograph"
    ]
@@ -647,7 +638,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dask_controller = tr.cluster.dask_controller(\n",
+    "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
     "    n_workers=100,\n",
@@ -730,18 +721,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": false
-   },
+   "metadata": {},
    "source": [
     "## Fluorescence Segmentation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Test Parameters"
    ]
@@ -1186,9 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Generate Segmentation"
    ]
@@ -1206,7 +1191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dask_controller = tr.cluster.dask_controller(\n",
+    "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"01:00:00\",\n",
     "    local=False,\n",
     "    n_workers=200,\n",
@@ -1468,18 +1453,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Phase Segmentation Training"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Data Preparation"
    ]
@@ -1961,7 +1942,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
    },
    "source": [
     "## Other"
@@ -2027,10 +2009,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.6"
   },
+  "toc-showcode": false,
+  "toc-showmarkdowntxt": true,
   "toc-showtags": false
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
