--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true,
-    "toc-nb-collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# TrenchRipper Master Notebook"
    ]
@@ -86,7 +83,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Extract to hdf5 files"
    ]
@@ -107,12 +107,11 @@
     "dask_controller = tr.trcluster.dask_controller(\n",
     "    walltime=\"04:00:00\",\n",
     "    local=False,\n",
-    "    n_workers=40,\n",
+    "    n_workers=10,\n",
     "    memory=\"2GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
-    "dask_controller.startdask()\n",
-    "dask_controller.daskcluster.start_workers()"
+    "dask_controller.startdask()"
    ]
   },
   {
@@ -138,7 +137,11 @@
    "outputs": [],
    "source": [
     "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
-    "    nd2file, headpath, tpts_per_file=100, ignore_fovmetadata=False\n",
+    "    nd2file,\n",
+    "    headpath,\n",
+    "    tpts_per_file=100,\n",
+    "    ignore_fovmetadata=False,\n",
+    "    nd2reader_override={\"z_levels\": [], \"z_coordinates\": []},\n",
     ")"
    ]
   },
@@ -178,7 +181,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Kymographs"
    ]
@@ -227,7 +233,7 @@
    "outputs": [],
    "source": [
     "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]\n",
-    "interactive_kymograph = tr.interactive.kymograph_interactive(headpath)\n",
+    "interactive_kymograph = tr.kymograph_interactive(headpath)\n",
     "channels, fov_list, timepoints_len = interactive_kymograph.get_image_params()"
    ]
   },
@@ -645,8 +651,7 @@
     "    memory=\"8GB\",\n",
     "    working_directory=\"/n/scratch2/de64/2019-11-09_CN_Growth_Curve/\",\n",
     ")\n",
-    "dask_controller.startdask()\n",
-    "dask_controller.daskcluster.start_workers()"
+    "dask_controller.startdask()"
    ]
   },
   {
@@ -721,7 +726,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Fluorescence Segmentation"
    ]
@@ -756,7 +764,7 @@
    "outputs": [],
    "source": [
     "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]\n",
-    "interactive_segmentation = tr.interactive.fluo_segmentation_interactive(headpath)"
+    "interactive_segmentation = tr.fluo_segmentation_interactive(headpath)"
    ]
   },
   {
@@ -811,7 +819,7 @@
     "kymo_arr_int = interactive(\n",
     "    interactive_segmentation.import_array,\n",
     "    {\"manual\": True},\n",
-    "    n_trenches=IntText(value=1, description=\"Number of trenches:\", disabled=False),\n",
+    "    n_trenches=IntText(value=12, description=\"Number of trenches:\", disabled=False),\n",
     "    t_range=IntRangeSlider(\n",
     "        value=[\n",
     "            interactive_segmentation.t_range[0],\n",
@@ -827,13 +835,13 @@
     "        value=1, description=\"Time Subsampling Step:\", min=1, max=20, step=1\n",
     "    ),\n",
     "    fig_size_y=IntSlider(\n",
-    "        value=9, description=\"Figure Size (Y Dimension):\", min=1, max=30, step=1\n",
+    "        value=20, description=\"Figure Size (Y Dimension):\", min=1, max=30, step=1\n",
     "    ),\n",
     "    fig_size_x=IntSlider(\n",
-    "        value=6, description=\"Figure Size (X Dimension):\", min=1, max=30, step=1\n",
+    "        value=12, description=\"Figure Size (X Dimension):\", min=1, max=30, step=1\n",
     "    ),\n",
     "    img_per_row=IntSlider(\n",
-    "        value=2, description=\"Images per Row:\", min=1, max=30, step=1\n",
+    "        value=6, description=\"Images per Row:\", min=1, max=30, step=1\n",
     "    ),\n",
     ")\n",
     "display(kymo_arr_int)"
@@ -1198,17 +1206,7 @@
     "    memory=\"1GB\",\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
-    "dask_controller.startdask()\n",
-    "dask_controller.daskcluster.start_workers()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dask_controller.reset()"
+    "dask_controller.startdask()"
    ]
   },
   {
@@ -1275,7 +1273,13 @@
    "outputs": [],
    "source": [
     "score_function = tr.tracking.scorefn(\n",
-    "    headpath, \"fluorsegmentation\", u_size=0.22, sig_size=0.08, u_pos=0.21, sig_pos=0.1\n",
+    "    headpath,\n",
+    "    \"fluorsegmentation\",\n",
+    "    u_size=0.22,\n",
+    "    sig_size=0.08,\n",
+    "    u_pos=0.21,\n",
+    "    sig_pos=0.1,\n",
+    "    w_merge=0.8,\n",
     ")"
    ]
   },
@@ -1336,6 +1340,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dask_controller = tr.trcluster.dask_controller(\n",
+    "    walltime=\"01:00:00\",\n",
+    "    local=False,\n",
+    "    n_workers=100,\n",
+    "    memory=\"2GB\",\n",
+    "    working_directory=headpath + \"/dask\",\n",
+    ")\n",
+    "dask_controller.startdask()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dask_controller.displaydashboard()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Tracking_Solver = tr.tracking.tracking_solver(\n",
     "    headpath, \"fluorsegmentation\", paramfile=True\n",
     ")"
@@ -1347,7 +1376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Tracking_Solver.lineage_trace_file(4)"
+    "Tracking_Solver.compute_all_lineages(dask_controller)"
    ]
   },
   {
@@ -1356,7 +1385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Tracking_Solver.compute_all_lineages()"
+    "dask_controller.shutdown()"
    ]
   },
   {
@@ -1453,7 +1482,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true,
+    "toc-nb-collapsed": true
+   },
    "source": [
     "## Phase Segmentation Training"
    ]
